@@ -1,3 +1,8 @@
+2007-02-19  John W. Eaton  <jwe@octave.org>
+
+	* test_system.m: Handle confirm_recursive_rmdir as function
+	instead of built-in variable.
+
 2007-02-07  John W. Eaton  <jwe@octave.org>
 
 	* fntests.m: Add plea for help writing tests.
